# rp1-graveyard

audits/rp1-ingestion/raw_rp1_descriptors/: contract.yaml
audits/rp1-ingestion/raw_rp1_locations/: contract.yaml
audits/rp1-standardization/standardized_rp1_descriptors/: contract.yaml
audits/rp1-standardization/standardized_rp1_locations/: contract.yaml
audits/rp1-tagging-rec-precompute/rp1_transitive_tagging_recommendations/: contract.yaml
rp1-ingestion/: .dataplane.yaml  .gitignore  .tool-versions  README.md  main.py  pyproject.toml
rp1-ingestion/src/: rp1_ingestion.py
rp1-ingestion/tests/: test_rp1_ingestion.py
rp1-standardization/: .dataplane.yaml  .tool-versions  README.md  main.py  pyproject.toml
rp1-standardization/src/: compression_tools.py  constants.py  standardizer.py  utils.py
rp1-standardization/tests/: conftest.py  test_compression_tools.py  test_standardizer.py
rp1-tagging-rec-precompute/: .dataplane.yaml  README.md  main.py  pyproject.toml
rp1-tagging-rec-precompute/src/: constants.py  transitivity_mapper.py  utils.py
rp1-tagging-rec-precompute/tests/: conftest.py  test_transitivity_mapper.py  test_utils.py
rp1-transaction-enrichment/: .dataplane.yaml  README.md  main.py  pyproject.toml
rp1-transaction-enrichment/src/: constants.py  core.py  join_methodologies.py
rp1-transaction-enrichment/tests/: conftest.py  test_join_methodologies.py
