[tool.poetry]
name = "rp1-ingestion"
version = "0.1.0-dev0"
description = "Data-plane for ingesting RP1's Places dataset"
authors = ["Navjot Singh <nsingh375@bloomberg.net>"]

[[tool.poetry.source]]
default = true
name = 'artifactory'
url = 'https://artprod.dev.bloomberg.com/artifactory/api/pypi/bloomberg-pypi/simple'

[[tool.poetry.source]]
name = "secondmeasure"
url = "http://artprod.dev.bloomberg.com/artifactory/api/pypi/fury_pypi/simple"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1"
boto3 = "^1.28.1"
botocore = "^1.31.1"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
boto3-type-annotations = "^0.3.1"
fsspec = "^2023.6.0"
s3fs = "^2023.6.0"
[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^7.2"
isort = "*"
coverage = "*"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
atomic = true
line_length = 120
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
known_first_party = "rp1_ingestion"
src_paths = "src,tests"

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
omit = [
    "tests/*",
]
precision = 2
skip_covered = true
exclude_lines = [
    "pragma: no cover"
]
